force-app/main/default/objects/KimbleOne__SupplierInvoiceableItem__c/KimbleOne__SupplierInvoiceableItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Supplier Invoiceable Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>SupplierInvoicableItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Invoiceable Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>