force-app/main/default/objects/KimbleOne__SupplierInvoiceableItem__c/fields/KimbleOne__ExpensesInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesInvoiceableAmount__c</fullName>
    <formula>IF(NOT(ISBLANK(KimbleOne__ExpenseItem__c)), KimbleOne__InvoiceableAmount__c, 0)</formula>
    <label>Expenses Invoiceable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>