force-app/main/default/objects/KimbleOne__SupplierInvoiceableItem__c/fields/KimbleOne__InvoicedAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicedAmount__c</fullName>
    <label>Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>