force-app/main/default/objects/KimbleOne__SupplierInvoiceableItem__c/fields/KimbleOne__InvoiceItemDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceItemDate__c</fullName>
    <formula>if(not(isblank(KimbleOne__TimeEntry__c)), KimbleOne__TimeEntry__r.KimbleOne__TimePeriod__r.KimbleOne__StartDate__c,
            if(not(isblank(KimbleOne__ExpenseItem__c)), KimbleOne__ExpenseItem__r.KimbleOne__TimePeriod__r.KimbleOne__StartDate__c,
            datevalue(CreatedDate) ))</formula>
    <label>Invoice Item Date</label>
    <type>Date</type>
</CustomField>