force-app/main/default/objects/KimbleOne__SupplierInvoiceableItem__c/fields/KimbleOne__IsSupplierRequisitioned__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsSupplierRequisitioned__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Supplier Requisitioned?</label>
    <type>Checkbox</type>
</CustomField>