force-app/main/default/objects/KimbleOne__SupplierInvoiceableItem__c/fields/KimbleOne__PeriodCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodCost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period Cost</label>
    <referenceTo>KimbleOne__PeriodCost__c</referenceTo>
    <relationshipLabel>Supplier Invoiceable Items</relationshipLabel>
    <relationshipName>SupplierInvoiceableItems</relationshipName>
    <type>Lookup</type>
</CustomField>