force-app/main/default/objects/KimbleOne__SupplierInvoiceableItem__c/fields/KimbleOne__ResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resourced Activity</label>
    <referenceTo>KimbleOne__ResourcedActivity__c</referenceTo>
    <relationshipLabel>Supplier Invoiceable Items</relationshipLabel>
    <relationshipName>SupplierInvoiceableItems</relationshipName>
    <type>Lookup</type>
</CustomField>