force-app/main/default/objects/KimbleOne__SupplierInvoiceableItem__c/fields/KimbleOne__ServicesInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ServicesInvoiceableAmount__c</fullName>
    <formula>IF(ISBLANK(KimbleOne__ExpenseItem__c), KimbleOne__InvoiceableAmount__c, 0)</formula>
    <label>Services Invoiceable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>