force-app/main/default/objects/KimbleOne__SupplierInvoiceableItem__c/fields/KimbleOne__SupplierInvoiceItemStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoiceItemStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Invoice Item Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>SupplierInvoiceItemStatus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Supplier Invoiceable Items</relationshipLabel>
    <relationshipName>SupplierInvoiceableItems</relationshipName>
    <type>Lookup</type>
</CustomField>