force-app/main/default/objects/KimbleOne__SupplierInvoiceableItem__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__InvoiceableAmount__c</columns>
    <columns>KimbleOne__DeliveryElement__c</columns>
    <columns>KimbleOne__InvoicedAmount__c</columns>
    <columns>KimbleOne__Milestone__c</columns>
    <columns>KimbleOne__PeriodCost__c</columns>
    <columns>KimbleOne__TimeEntry__c</columns>
    <columns>KimbleOne__ExpenseItem__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>